# knowledge_representation

./: .clang-format  CHANGELOG.rst  CMakeLists.txt  Compiler_8cpp_source.html  Compiler_8h_source.html  Doxyfile  EntityAttribute_8h_source.html  LTMCConcept_8h_source.html  LTMCDoor_8h_source.html  LTMCEntity_8h_source.html  LTMCInstance_8h_source.html  LTMCLock_8h_source.html  LTMCMap_8h_source.html  LTMCPoint_8h_source.html  LTMCPose_8h_source.html  LTMCRegion_8h_source.html  Lexer_8h_source.html  LongTermMemoryConduitInterface_8h_source.html  LongTermMemoryConduitMySQL_8cpp_source.html  LongTermMemoryConduitMySQL_8h_source.html  LongTermMemoryConduitPostgreSQL_8cpp_source.html  LongTermMemoryConduitPostgreSQL_8h_source.html  README  README.md  annotated.html  annotated_dup.js  classes.html  classknowledge__rep_1_1LTMCConcept-members.html  classknowledge__rep_1_1LTMCConcept.html  classknowledge__rep_1_1LTMCConcept.js  classknowledge__rep_1_1LTMCDoor-members.html  classknowledge__rep_1_1LTMCDoor.html  classknowledge__rep_1_1LTMCDoor.js  classknowledge__rep_1_1LTMCEntity-members.html  classknowledge__rep_1_1LTMCEntity.html  classknowledge__rep_1_1LTMCEntity.js  classknowledge__rep_1_1LTMCInstance-members.html  classknowledge__rep_1_1LTMCInstance.html  classknowledge__rep_1_1LTMCInstance.js  classknowledge__rep_1_1LTMCLock-members.html  (+60 more)
.github/workflows/: ci.yaml
doc/: annotating_maps.md
env-hooks/: knowledge_representation.bash  knowledge_representation.sh
include/: interface.h
include/knowledge_representation/: Compiler.h  EntityAttribute.h  LTMCConcept.h  LTMCDoor.h  LTMCEntity.h  LTMCInstance.h  LTMCLock.h  LTMCMap.h  LTMCPoint.h  LTMCPose.h  LTMCRegion.h  Lexer.h  LongTermMemoryConduit.h  LongTermMemoryConduitInterface.h  LongTermMemoryConduitPostgreSQL.h  MemoryConduit.h  ShortTermMemory.h  ShortTermMemoryConduit.h  convenience.h  node.h  villa_convenience.h
include/villa_world_model/: LongTermMemoryConduit.h  MemoryConduit.h
scripts/: configure_mysql.sh  configure_postgresql.sh  create_door_pgm  ikr  populate_with_file  populate_with_knowledge  populate_with_map  populate_with_xml  show_me  test_ltmc
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
sql/: create_database.sql  schema_postgresql.sql
src/: csv_reader.cpp  initialize_planner_test_configuration.cpp  interface.cpp  memory_conduit_proxy_node.cpp  short_term_memory_node.cpp  show_me.cpp  test_ltmc.cpp  test_mc.cpp  test_stmc.cpp  test_world_model.cpp
src/knowledge_representation/: __init__.py  knowledge_loader.py  map_image_utils.py  map_loader.py  memory_conduit.py  xml_kbase.py  xml_parsers.py
src/knowledge_representation/xml_parsers/: crowd.py  locations.py  names.py  objects.py  people.py  questions.py
src/libknowledge_rep/: Compiler.cpp  LongTermMemoryConduit.cpp  LongTermMemoryConduitMySQL.cpp  LongTermMemoryConduitPostgreSQL.cpp  LongTermMemoryConduit_wrapper.cpp  MemoryConduit.cpp  ShortTermMemory.cpp  convenience.cpp  python_wrapper.cpp  syntax_checker.cpp  villa_convenience.cpp
src/libknowledge_rep/mysql/: LongTermMemoryConduitMySQL.cpp  LongTermMemoryConduitMySQL.h
src/libknowledge_rep/postgresql/: LongTermMemoryConduitPostgreSQL.cpp  LongTermMemoryConduitPostgreSQL.h
src/libworld_model/: LongTermMemoryConduit.cpp  MemoryConduit.cpp
test/: concept_instance.cpp  entity.cpp  loaders.py  ltmc.cpp  ltmc.py  map_types.cpp  parser.cpp
test/resources/map/: map.pgm  map_inkscape.yaml
