<?xml version="1.0"?>
<package format="2">
    <name>knowledge_representation</name>
    <version>1.0.0</version>
    <description>The Villa world model</description>
    <maintainer email="jiangyuqian@utexas.edu">Yuqian Jiang</maintainer>
    <maintainer email="nickswalker@utexas.edu">Nick Walker</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>libmysqlclient-dev</depend>
    <depend>libmysqlcppconn-dev</depend>
    <depend>mysql-shell</depend>
    <depend>roscpp</depend>

    <export>
    </export>
</package>