<?xml version="1.0"?>
<package format="2">
    <name>knowledge_representation</name>
    <version>0.1.0</version>
    <description>APIs for storing and querying information about the world.
    Provides C++ and Python API's to make getting facts in and out easy (while still exposing a full SQL interface).
        Supports PostgreSQL and MySQL backends.</description>

    <maintainer email="nswalker@cs.washington.edu">Nick Walker</maintainer>
    <maintainer email="jiangyuqian@utexas.edu">Yuqian Jiang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslint</build_depend>

    <depend>bison</depend>
    <depend>boost</depend>
    <depend>flex</depend>
    <depend>libmysqlclient-dev</depend>
    <depend>libmysqlcppconn-dev</depend>
    <depend>libpqxx</depend>
    <depend>libpqxx-dev</depend>
    <depend>postgresql</depend>
    <depend>python-dev</depend>

    <test_depend>rosunit</test_depend>

    <export>
    </export>
</package>