<?xml version="1.0"?>
<package format="3">
    <name>knowledge_representation</name>
    <version>0.9.2</version>
    <description>APIs for storing and querying information about the world.
    Provides C++ and Python API's to make getting facts in and out easy (while still exposing a full SQL interface).
        Supports PostgreSQL and MySQL backends.</description>

    <maintainer email="nswalker@cs.washington.edu">Nick Walker</maintainer>
    <maintainer email="jiangyuqian@utexas.edu">Yuqian Jiang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
    <build_depend>roslint</build_depend>

    <depend>boost</depend>
    <depend>libpqxx</depend>
    <depend>libpqxx-dev</depend>
    <depend>postgresql</depend>
    <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-imaging</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pil</exec_depend>

    <test_depend>rosunit</test_depend>

    <export>
    </export>
</package>